<resources>
    <string name="app_name">BoxQ</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="default_web_client_id" translatable="false">444706257303-0c3jl7j6g6mioua9055hopf8m4caqie5.apps.googleusercontent.com</string>
    <string name="iniciar_sesi_n_con_google">Iniciar sesión con Google</string>
    <string name="todo">TODO</string>
    <string name="registrarme">Registrarme</string>
    <string name="no_tienes_una_cuenta">No tienes una cuenta?</string>
    <string name="ingresar">Ingresar</string>
    <string name="contrase_a">Contraseña</string>
    <string name="correo">Correo</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="agregar_con_fragment">Agregar con Fragment</string>
    <string name="button_malo">Button malo</string>
    <string name="todoo">TODO</string>
    <string name="dia">Dia</string>
    <string name="todooo">TODO</string>
    <string name="registro">Registro</string>
    <string name="nombre_y_apellido">Nombre y Apellido</string>
    <string name="nombre">Nombre</string>
    <string name="registrarmee">Registrarme</string>
    <string name="contrase_aa">Contraseña</string>
    <string name="correoo">Correo</string>
    <string name="modalidad">Modalidad:</string>
    <string name="crossfit">Crossfit</string>
    <string name="movimiento">Movimiento:</string>
    <string name="nombree">Nombre</string>
    <string name="repeticiones">Repeticiones:</string>
    <string name="reps">Reps</string>
    <string name="carga">Carga:</string>
    <string name="peso">Peso</string>
    <string name="modo">Modo</string>
    <string name="agregar">Agregar</string>
    <string name="toodooo" />
    <string name="button_perfil">button perfil</string>
    <string name="agregar_registro">agregar registro</string>

    <string-array name="op_nombre">
        <item>Power Snatch </item>
        <item>Snatch </item>
        <item>Muscle Snatch </item>
        <item>Deadlifts Snatch </item>
        <item>Front Squat </item>
        <item>Back Squat </item>
        <item>Power Clean </item>
        <item>Clean </item>
        <item>Deadlifts Clean </item>
        <item>Clean and Split </item>
        <item>Squat Jerk </item>
        <item>Jerk desde Soporte </item>
        <item>Shoulder Press </item>
        <item>Push Press </item>
    </string-array>


    <string-array name="op_modalidad">
        <item>AMRAP</item>
        <item>For Time</item>
        <item>Set/Rondas</item>
        <item>EMOM</item>
    </string-array>

</resources>