<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="26dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hola,"
            android:textSize="34sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/name_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Nombre"
            android:textSize="34sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Registro de tu día"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/dia"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#120027EA"
                    android:gravity="center"
                    android:text="@string/dia" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_add_frag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#52BF90"
                android:text="@string/agregar_registro"
                app:cornerRadius="10dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewSingle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </androidx.recyclerview.widget.RecyclerView>

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#da4f4a"
            android:text="@string/cerrar_sesi_n"
            app:cornerRadius="10dp" />

        <Button
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#4AAFCD"
            android:text="@string/button_perfil"
            app:cornerRadius="10dp" />
    </LinearLayout>


</androidx.drawerlayout.widget.DrawerLayout>